--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Xavier Didelot <xavier.didelot@gmail.com>
 Maintainer: Xavier Didelot <xavier.didelot@gmail.com>
 Depends: 
 Suggests: ape, knitr
-Description: CreDating project
+Description: The CreDating project is still work in progress.
 VignetteBuilder: knitr
-License: GPL (>=2)
+License: GPL (>=2) + file LICENSE
 RoxygenNote: 6.0.1
