--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1
 Date: 2017-09-22
 Author: Xavier Didelot <xavier.didelot@gmail.com>
 Maintainer: Xavier Didelot <xavier.didelot@gmail.com>
-Depends: 
+Depends: R (>= 3.0.0)
 Suggests: ape, knitr
 Description: The CreDating project is still work in progress.
 VignetteBuilder: knitr
