faster prior function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,5 @@ S3method(plot,resCreDating)
 export(credating)
 export(leafDates)
 export(roottotip)
+importFrom(grDevices,rgb)
+importFrom(graphics,abline)
