--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,9 @@ Date: 2017-09-22
 Author: Xavier Didelot <xavier.didelot@gmail.com>
 Maintainer: Xavier Didelot <xavier.didelot@gmail.com>
 Depends: R (>= 3.0.0)
-Suggests: ape, knitr
+Imports: ape, stats, graphics
+Suggests: knitr
 Description: The CreDating project is still work in progress.
 VignetteBuilder: knitr
-License: GPL (>=2) + file LICENSE
+License: MIT + file LICENSE
 RoxygenNote: 6.0.1
