--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,14 @@
 S3method(plot,resCreDating)
 S3method(print,resCreDating)
 S3method(summary,resCreDating)
+export(coalprior)
 export(credate)
 export(leafDates)
 export(roottotip)
 import(ape)
 import(graphics)
 import(stats)
+importFrom(Rcpp,evalCpp)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
+useDynLib(CreDating)
