--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,6 @@ import(stats)
 importFrom(Rcpp,evalCpp)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 useDynLib(CreDating)
