--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,11 @@
 S3method(plot,resCreDating)
 S3method(print,resCreDating)
 S3method(summary,resCreDating)
-export(coalprior)
 export(credate)
 export(leafDates)
 export(roottotip)
+export(simdatedtree)
+export(simobsphy)
 import(ape)
 import(graphics)
 import(stats)
