Started writing coalescent simulation function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(summary,resCreDating)
 export(credate)
 export(leafDates)
 export(roottotip)
+export(simcoaltree)
 export(simdatedtree)
 export(simobsphy)
 import(ape)
