--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,resCreDating)
 S3method(summary,resCreDating)
 export(credate)
 export(leafDates)
+export(modelcompare)
 export(roottotip)
 export(simcoaltree)
 export(simdatedtree)
