--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,resCreDating)
 S3method(summary,resCreDating)
 export(credate)
 export(leafDates)
+export(loadCFML)
 export(modelcompare)
 export(roottotip)
 export(simcoaltree)
@@ -16,6 +17,7 @@ import(stats)
 importFrom(Rcpp,evalCpp)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
+importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 useDynLib(CreDating)
