Interface with Gubbins

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(summary,resCreDating)
 export(credate)
 export(leafDates)
 export(loadCFML)
+export(loadGubbins)
 export(modelcompare)
 export(roottotip)
 export(simcoaltree)
