--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(leafDates)
 export(loadCFML)
 export(loadGubbins)
 export(modelcompare)
+export(nodeDates)
 export(roottotip)
 export(simcoaltree)
 export(simdatedtree)
