--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,resCreDating)
 S3method(print,resCreDating)
 S3method(summary,resCreDating)
 export(credate)
+export(initRoot)
 export(leafDates)
 export(loadCFML)
 export(loadGubbins)
