--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,resCreDating)
 S3method(print,resCreDating)
 S3method(summary,resCreDating)
+export(allDates)
 export(credate)
 export(initRoot)
 export(leafDates)
