Added forced root-to-tip analysis and dual scale

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ S3method(print,resCreDating)
 S3method(summary,resCreDating)
 export(allDates)
 export(credate)
+export(dualScale)
 export(initRoot)
 export(leafDates)
 export(loadCFML)
 export(loadGubbins)
 export(modelcompare)
 export(nodeDates)
+export(plotDualScale)
 export(roottotip)
 export(simcoaltree)
 export(simdatedtree)
