--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BactDating
 Type: Package
-Title: BactDating project
-Version: 0.1
-Date: 2017-09-22
+Title: BactDating: Bayesian inference of ancestral dates on bacterial phylogenetic trees
+Version: 0.9
+Date: 2018-05-09
 Author: Xavier Didelot <xavier.didelot@gmail.com>
 Maintainer: Xavier Didelot <xavier.didelot@gmail.com>
 Depends: R (>= 3.0.0)
@@ -11,7 +11,7 @@ LinkingTo: Rcpp
 Suggests: knitr,
     testthat,
     covr
-Description: The BactDating project is still work in progress.
+Description: BactDating is a R package to perform Bayesian inference of ancestral dates on bacterial phylogenetic trees.
 VignetteBuilder: knitr
 License: MIT + file LICENSE
 RoxygenNote: 6.0.1
