--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: BactDating: Bayesian inference of ancestral dates on bacterial phylogenetic trees
 Version: 0.9
 Date: 2018-05-09
-Author: Xavier Didelot <xavier.didelot@gmail.com>
+Authors@R: person("Xavier","Didelot",email="xavier.didelot@gmail.com",role=c("aut", "cre"))
 Maintainer: Xavier Didelot <xavier.didelot@gmail.com>
 Depends: R (>= 3.0.0)
 Imports: Rcpp (>= 0.12.13), ape, stats, graphics
@@ -14,6 +14,8 @@ Suggests: knitr,
 Description: BactDating is a R package to perform Bayesian inference of ancestral dates on bacterial phylogenetic trees.
 VignetteBuilder: knitr
 License: MIT + file LICENSE
+URL: https://github.com/xavierdidelot/BactDating
+BugReports: https://github.com/xavierdidelot/BactDating/issues
 RoxygenNote: 6.0.1
 Encoding: UTF-8
 LazyData: true
