--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,resBactDating)
 S3method(print,resBactDating)
 S3method(summary,resBactDating)
 export(allDates)
+export(as.mcmc.resBactDating)
 export(bactdate)
 export(dualScale)
 export(initRoot)
