--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,4 +6,5 @@ articles:
   exampleRec: exampleRec.html
   exampleRelaxed: exampleRelaxed.html
   exampleTest: exampleTest.html
+  yourData: yourData.html
 
