--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BactDating
 Type: Package
 Title: BactDating: Bayesian inference of ancestral dates on bacterial phylogenetic trees
-Version: 1.0
-Date: 2018-12-12
+Version: 1.0.1
+Date: 2019-01-29
 Authors@R: person("Xavier","Didelot",email="xavier.didelot@gmail.com",role=c("aut", "cre"))
 Maintainer: Xavier Didelot <xavier.didelot@gmail.com>
 Depends: R (>= 3.0.0)
@@ -10,7 +10,8 @@ Imports: Rcpp (>= 0.12.13), ape, stats, graphics
 LinkingTo: Rcpp
 Suggests: knitr,
     testthat,
-    covr
+    covr,
+    coda
 Description: BactDating is a R package to perform Bayesian inference of ancestral dates on bacterial phylogenetic trees.
 VignetteBuilder: knitr
 License: MIT + file LICENSE
