--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,resBactDating)
 S3method(summary,resBactDating)
 export(allDates)
 export(as.mcmc.resBactDating)
+export(as.treedata.resBactDating)
 export(bactdate)
 export(dualScale)
 export(initRoot)
@@ -22,8 +23,10 @@ import(ape)
 import(graphics)
 import(stats)
 importFrom(Rcpp,evalCpp)
+importFrom(dplyr,tbl_df)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
+importFrom(methods,new)
 importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
