--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2019-01-29
 Authors@R: person("Xavier","Didelot",email="xavier.didelot@gmail.com",role=c("aut", "cre"))
 Maintainer: Xavier Didelot <xavier.didelot@gmail.com>
 Depends: R (>= 3.0.0)
-Imports: Rcpp (>= 0.12.13), ape, stats, graphics
+Imports: Rcpp (>= 0.12.13), ape, stats, graphics, dplyr, methods
 LinkingTo: Rcpp
 Suggests: knitr,
     testthat,
