--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(allDates)
 export(as.mcmc.resBactDating)
 export(as.treedata.resBactDating)
 export(bactdate)
+export(drop.tip.useRec)
 export(dualScale)
 export(initRoot)
 export(leafDates)
@@ -26,6 +27,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(dplyr,tbl_df)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
+importFrom(methods,ape)
 importFrom(methods,new)
 importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
