--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(allDates)
 export(as.mcmc.resBactDating)
 export(as.treedata.resBactDating)
 export(bactdate)
+export(clusteredTest)
 export(drop.tip.useRec)
 export(dualScale)
 export(initRoot)
