--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
 pandoc: 2.3.1
-pkgdown: 1.4.1
+pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   Staph: Staph.html
@@ -8,4 +8,5 @@ articles:
   exampleRelaxed: exampleRelaxed.html
   exampleTest: exampleTest.html
   yourData: yourData.html
+last_built: 2020-06-29T09:43Z
 
